:bug: Fix cutoff headers

--- a/components/pages/project/styles.module.scss
+++ b/components/pages/project/styles.module.scss
@@ -1,7 +1,7 @@
 .sectionHeader {
   bottom: 0;
   h2 {
-    transform: translateY(7px);
+    transform: translateY(10px);
     @include mediaQuery(mobile) {
       transform: none;
     }
